update: improving code snippets in mdx and putting the `rehypePrettyCode` theme in `src/data`

--- a/src/data/projects/dkshs.me.mdx
+++ b/src/data/projects/dkshs.me.mdx
@@ -3,7 +3,7 @@ title: "dkshs.me"
 description: My personal website (The website you're looking at).
 githubUrl: https://github.com/dkshs/dkshs.me
 demoUrl: https://dkshs.me/
-image: /projects/dkshs.me.png
+image: /projects/dkshs.me.png # file in the `/public` folder
 ---
 
 [![Project preview](/projects/dkshs.me.png)](https://dkshs.me/)
