update: adding some information to the project mdx

--- a/src/data/projects/ace-ex-ui.mdx
+++ b/src/data/projects/ace-ex-ui.mdx
@@ -6,3 +6,23 @@ demoUrl: https://ace-ex-ui.vercel.app/
 ---
 
 AceEx is a web design system that aims to make it easier to develop consistent, accessible, and responsive interfaces. The system comprises a collection of reusable, standardized and documented components that follow the brand's design principles.
+
+## About
+
+Design System with components, tokens, eslint config and documentation [StoryBook](https://ace-ex-ui.vercel.app/) for the components and tokens.
+
+## Quick Start
+
+Here are some useful links to get started with AceEx UI:
+
+- [Documentation](https://ace-ex-ui.vercel.app/) - Learn how to use AceEx UI and see the components in Storybook.
+- [Getting started](https://ace-ex-ui.vercel.app/?path=/docs/introduction-getting-started--page) - Set up a new app with AceEx UI or add it to one existing project.
+- [Theme](https://ace-ex-ui.vercel.app/?path=/docs/features-theme-tema--page) - Learn about our foundations such as colors, spacing, and typography.
+
+## Packages
+
+- **[@ace-ex/react](https://www.npmjs.com/package/@ace-ex/react)** — the core React component library
+- **[@ace-ex/tokens](https://www.npmjs.com/package/@ace-ex/tokens)** — visual primitives such as typography, color, and spacing
+- **[@ace-ex/eslint-config](https://www.npmjs.com/package/@ace-ex/eslint-config)** — Eslint configurations
+- **[@ace-ex/ts-config](https://www.npmjs.com/package/@ace-ex/ts-config)** — TypeScript settings.
+- **[@ace-ex/ace-template](https://github.com/dkshs/ace-ex-ui/tree/main/packages/ace-template)** — initialize a new Next.js app with AceEx UI.
