--- a/src/data/projects/video-ambilight.mdx
+++ b/src/data/projects/video-ambilight.mdx
@@ -8,5 +8,6 @@ image: /projects/video-ambilight.png # file in the `/public` folder
 
 [![Project preview](/projects/video-ambilight.png)](https://dkshs.github.io/video-ambilight/)
 
-Project using YouTube iframe API in HTML and react-player with React and NextJs to make an ambient light effect.
+Project using [YouTube iframe API](https://developers.google.com/youtube/iframe_api_reference) in HTML and [`react-player`](https://github.com/CookPete/react-player) with React and NextJs to make an ambient light effect.
+
 The aim of the project is to create an ambient light effect that changes color according to the video content, using the YouTube iframe API, an API that allows you to control the YouTube player using JavaScript. The API also lets you capture events such as player state, current time, and video quality.
