--- a/src/data/projects/cookiecutter-django.mdx
+++ b/src/data/projects/cookiecutter-django.mdx
@@ -4,4 +4,33 @@ description: A simple Django template with cookiecutter.
 githubUrl: https://github.com/dkshs/cookiecutter-django
 ---
 
-A template using Django with `cookiecutter` to quickly launch production-ready Django projects.
+A Django template with `cookiecutter` to quickly launch production-ready Django projects.
+
+[![license mit](https://img.shields.io/badge/licence-MIT-56BEB8)](LICENSE)
+[![Code style: black](https://img.shields.io/badge/code%20style-black-000000.svg)](https://github.com/ambv/black)
+
+## Usage
+
+First, get Cookiecutter.
+
+```bash
+pip install cookiecutter
+```
+
+Now run it against this repo:
+
+```bash
+cookiecutter https://github.com/dkshs/cookiecutter-django
+```
+
+You'll be prompted for some values. Provide them, then a Django project will be created for you.
+
+**Warning**: After this point, change 'DKSHS', etc to your own information.
+
+Answer the prompts with your own desired [options](https://github.com/dkshs/cookiecutter-django/blob/master/docs/project-generation-options.md).
+
+## For local development, see the following
+
+- [Developing locally using docker](https://github.com/dkshs/cookiecutter-django/blob/master/docs/developing-locally-docker.md)
+
+See more information in the github repo: [dkshs/cookiecutter-django](https://github.com/dkshs/cookiecutter-django).
