fix: correcting url for cookiecutter-django project license

--- a/src/data/projects/cookiecutter-django.mdx
+++ b/src/data/projects/cookiecutter-django.mdx
@@ -6,7 +6,7 @@ githubUrl: https://github.com/dkshs/cookiecutter-django
 
 A Django template with `cookiecutter` to quickly launch production-ready Django projects.
 
-[![license mit](https://img.shields.io/badge/licence-MIT-56BEB8)](LICENSE)
+[![license mit](https://img.shields.io/badge/licence-MIT-56BEB8)](https://github.com/dkshs/cookiecutter-django/blob/master/LICENSE)
 [![Code style: black](https://img.shields.io/badge/code%20style-black-000000.svg)](https://github.com/ambv/black)
 
 ## Usage
