update: mdx styling, removing log and updating a project title

--- a/src/data/projects/dk-tube.mdx
+++ b/src/data/projects/dk-tube.mdx
@@ -1,11 +1,11 @@
 ---
-title: "DKTUBE"
+title: "DkTube"
 description: A YouTube clone project.
 githubUrl: https://github.com/dkshs/dk-tube
 demoUrl: https://dktube.vercel.app
 ---
 
-DKTUBE is a project that aims to recreate the functionality and interface of Youtube.
+DkTube is a project that aims to recreate the functionality and interface of Youtube.
 
 ## Technologies used
 
