update: dk-tube project

--- a/src/data/projects/dk-tube.mdx
+++ b/src/data/projects/dk-tube.mdx
@@ -12,6 +12,7 @@ DkTube is a project that aims to recreate the functionality and interface of You
 - [Next.Js](https://nextjs.org/)
 - [TailwindCSS](https://tailwindcss.com/)
 - [Clerk](https://clerk.com/)
+- [TanStack Query](https://tanstack.com/query/v3/)
 - [react-player](https://github.com/CookPete/react-player)
 
 ## Install and run the project
@@ -20,7 +21,7 @@ DkTube is a project that aims to recreate the functionality and interface of You
 
 You need to have a main dependency installed:
 
-- [Node.js](https://nodejs.dev/) LTS v16 (or any higher version)
+- [Node.js](https://nodejs.dev/) LTS v18 (or any higher version)
 
 Do you use `nvm`? Then you can run `nvm install` in the project folder to install and use the most appropriate version of Node.js.
 
