chore: add demo url to eslint-config project

--- a/src/data/projects/eslint-config.mdx
+++ b/src/data/projects/eslint-config.mdx
@@ -2,6 +2,7 @@
 title: "Eslint Config"
 description: DKSHS's ESLint config.
 githubUrl: https://github.com/dkshs/eslint-config
+demoUrl: https://eslint-config.dkshs.me
 ---
 
 [![Version](https://img.shields.io/npm/v/@dkshs/eslint-config)](https://www.npmjs.com/package/@dkshs/eslint-config)
