chore(projects): update eslint-config

--- a/src/data/projects/eslint-config.mdx
+++ b/src/data/projects/eslint-config.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Eslint Config"
-description: DKSHS's ESLint config.
+title: "ESLint Config"
+description: DKSHS's ESLint config preset for JavaScript, TypeScript, and Prettier.
 githubUrl: https://github.com/dkshs/eslint-config
 demoUrl: https://eslint-config.dkshs.me
 ---
@@ -10,31 +10,36 @@ demoUrl: https://eslint-config.dkshs.me
 
 ## Features
 
-- Double quotes, with semi
-- Format with Prettier
+- Double quotes, with semi.
+- Format with Prettier.
 - Sort imports, `package.json`, `tsconfig.json`...
-- Reasonable defaults, best practices, only one line of config
-- Designed to work with TypeScript, JSX out-of-box
-- Lints also for json, yaml, toml, markdown
+- Reasonable defaults, best practices, only one line of config.
+- Designed to work with TypeScript out-of-box.
+- Support JSON(5), YAML, TOML, Markdown...
 - [ESLint Flat config](https://eslint.org/docs/latest/use/configure/configuration-files-new), compose easily!
-- Optional [React](https://react.dev/), [NextJs](https://nextjs.org/), [TailwindCSS](https://tailwindcss.com/) support
+- Ignores common files like `dist`, `node_modules`, `coverage`, and files in `.gitignore`.
+- Optional [React](https://react.dev/), [NextJs](https://nextjs.org/), [TailwindCSS](https://tailwindcss.com/), [TanStack Query](https://tanstack.com/query/) support.
+- Requires ESLint v9.5.0+.
 
 > IMPORTANT:
+>
 > Since v2.2.0, this config is rewritten to the new [ESLint Flat config](https://eslint.org/docs/latest/use/configure/configuration-files-new), check the [release note](https://github.com/dkshs/eslint-config/releases/tag/v2.2.0) for more details.
+>
+> Since v3.0.0, ESLint v9.5.0+ is now required.
 
 ## Usage
 
 1. Install the dependencies:
 
 ```bash
-npm i -D @dkshs/eslint-config
+npm i -D eslint @dkshs/eslint-config
 ```
 
-> Require Node.js >= 18.18, and ESLint >= 8.40.0.
+> Require Node.js >= 18.18, and ESLint >= 9.5.0.
 
 2. Create `eslint.config.mjs` in your project root:
 
-```js
+```mjs
 // eslint.config.mjs
 import { dkshs } from "@dkshs/eslint-config";
 
@@ -46,6 +51,7 @@ export default dkshs(
     react: true, // auto detection
     nextjs: false, // auto detection
     tailwindcss: false, // auto detection
+    reactQuery: false,  // auto detection
   },
   {
     /* your custom config */
@@ -72,9 +78,6 @@ Add the following settings to your `.vscode/settings.json`:
 
 ```json
 {
-  // Enable the ESlint flat config support
-  "eslint.experimental.useFlatConfig": true,
-
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
   "editor.formatOnSave": false,
@@ -98,7 +101,12 @@ Add the following settings to your `.vscode/settings.json`:
     "yaml",
     "toml",
     "gql",
-    "graphql"
+    "graphql",
+    "css",
+    "less",
+    "scss",
+    "pcss",
+    "postcss"
   ]
 }
 ```
@@ -123,12 +131,13 @@ And that's it! Or you can configure each integration individually, for example:
 import { dkshs } from "@dkshs/eslint-config";
 
 export default dkshs({
-  // TypeScript, React, NextJs and TailwindCSS are auto-detected,
+  // TypeScript, React, NextJs, TailwindCSS and TanStack Query are auto-detected,
   // you can also explicitly enable them:
   typescript: true,
   react: true,
   nextjs: true,
   tailwindcss: true,
+  reactQuery: true,
 
   // Disable jsonc, yaml and toml support
   jsonc: false,
@@ -153,6 +162,7 @@ export default dkshs(
   {
     // Configures for dkshs's config
   },
+
   // From the second arguments they are ESLint Flat Configs
   // you can have multiple configs
   {
@@ -187,6 +197,37 @@ export default dkshs({
 });
 ```
 
+### Optional Configs
+
+We provide some optional configs for specific use cases, that we don't include their dependencies by default.
+> React, Next.js and Tailwind CSS have their dependencies by default.
+
+#### TanStack Query
+
+To enable TanStack Query support, you need to have the package installed or explicitly enable it:
+
+```js
+// eslint.config.js
+import { dkshs } from "@dkshs/eslint-config";
+
+export default dkshs({
+  reactQuery: true,
+});
+```
+
+To work, the [`@tanstack/eslint-plugin-query`](https://tanstack.com/query/latest/docs/eslint/eslint-plugin-query) package must be installed:
+
+```bash
+npm i -D @tanstack/eslint-plugin-query
+```
+
+> Require @tanstack/eslint-plugin-query >= 5.50.0
+
+## References and inspirations
+
+- [@antfu/eslint-config](https://github.com/antfu/eslint-config) - Anthony's ESLint config preset.
+- [@sxzz/eslint-config](https://github.com/sxzz/eslint-config) - A opinionated ESLint config preset.
+
 ## License
 
-This project is licensed under the **MIT** License - see the [LICENSE](./LICENSE) file for details
+This project is licensed under the **MIT** License - see the [LICENSE](https://github.com/dkshs/dkshs.me/blob/master/LICENSE) file for details
