chore: update projects

--- a/src/data/projects/dk-tube.mdx
+++ b/src/data/projects/dk-tube.mdx
@@ -2,7 +2,7 @@
 title: "DkTube"
 description: A YouTube clone project.
 githubUrl: https://github.com/dkshs/dk-tube
-demoUrl: https://dktube.vercel.app
+siteUrl: https://dktube.vercel.app
 ---
 
 DkTube is a project that aims to recreate the functionality and interface of Youtube.
