--- a/src/data/projects/dkblog.mdx
+++ b/src/data/projects/dkblog.mdx
@@ -2,7 +2,7 @@
 title: "DkBlog"
 description: A dynamic blog using markdown with Next.Js.
 githubUrl: https://github.com/dkshs/dkblog
-demoUrl: https://blog.dkshs.me
+siteUrl: https://blog.dkshs.me
 ---
 
 DkBlog is a project using [Next.Js](https://nextjs.org/) to create a dynamic blog with [markdown](https://www.markdownguide.org/).
