--- a/src/data/projects/eslint-config.mdx
+++ b/src/data/projects/eslint-config.mdx
@@ -2,7 +2,7 @@
 title: "ESLint Config"
 description: DKSHS's ESLint config preset for JavaScript, TypeScript, and Prettier.
 githubUrl: https://github.com/dkshs/eslint-config
-demoUrl: https://eslint-config.dkshs.me
+siteUrl: https://eslint-config.dkshs.me
 ---
 
 [![Version](https://img.shields.io/npm/v/@dkshs/eslint-config)](https://www.npmjs.com/package/@dkshs/eslint-config)
@@ -39,7 +39,7 @@ npm i -D eslint @dkshs/eslint-config
 
 2. Create `eslint.config.mjs` in your project root:
 
-```mjs
+```js
 // eslint.config.mjs
 import { dkshs } from "@dkshs/eslint-config";
 
