--- a/src/data/projects/dkshs.me.mdx
+++ b/src/data/projects/dkshs.me.mdx
@@ -2,7 +2,7 @@
 title: "dkshs.me"
 description: My personal website (The website you're looking at).
 githubUrl: https://github.com/dkshs/dkshs.me
-demoUrl: https://dkshs.me/
+siteUrl: https://dkshs.me/
 image: /projects/dkshs.me.png # file in the `/public` folder
 ---
 
