--- a/src/data/projects/video-ambilight.mdx
+++ b/src/data/projects/video-ambilight.mdx
@@ -2,7 +2,7 @@
 title: "Video Ambilight"
 description: 🌈 Ambilight Effect - React - Next.js (YouTube iframe, Video).
 githubUrl: https://github.com/dkshs/video-ambilight
-demoUrl: https://dkshs.github.io/video-ambilight/
+siteUrl: https://dkshs.github.io/video-ambilight/
 image: /projects/video-ambilight.png # file in the `/public` folder
 ---
 
