feat: display last modified date for projects
* This change adds the last modified date to each project displayed on the website.
* Additionally, a sitemap has been added to improve SEO.
* A trailing slash has also been added to URLs.

--- a/src/data/projects/ace-ex-ui.mdx
+++ b/src/data/projects/ace-ex-ui.mdx
@@ -3,6 +3,7 @@ title: "AceEx UI"
 description: Construction of a design system. AceEx's design system for the web.
 githubUrl: https://github.com/dkshs/ace-ex-ui
 siteUrl: https://ace-ex-ui.vercel.app/
+lastModified: "2025-01-21"
 ---
 
 AceEx is a web design system that aims to make it easier to develop consistent, accessible, and responsive interfaces. The system comprises a collection of reusable, standardized and documented components that follow the brand's design principles.
