--- a/src/data/projects/dk-tube.mdx
+++ b/src/data/projects/dk-tube.mdx
@@ -3,6 +3,7 @@ title: "DkTube"
 description: A YouTube clone project.
 githubUrl: https://github.com/dkshs/dk-tube
 siteUrl: https://dktube.vercel.app
+lastModified: "2025-01-21"
 ---
 
 DkTube is a project that aims to recreate the functionality and interface of Youtube.
