--- a/src/data/projects/dkblog-contentlayer.mdx
+++ b/src/data/projects/dkblog-contentlayer.mdx
@@ -2,6 +2,7 @@
 title: "DkBlog ContentLayer"
 description: A static blog using ContentLayer in Next.Js
 githubUrl: https://github.com/dkshs/dkblog-contentlayer
+lastModified: "2023-10-30"
 ---
 
 DkBlog ContentLayer is a project using [Next.Js](https://nextjs.org/) to create a static blog with [ContentLayer](https://contentlayer.dev/).
