--- a/src/data/projects/dkblog.mdx
+++ b/src/data/projects/dkblog.mdx
@@ -3,6 +3,7 @@ title: "DkBlog"
 description: A dynamic blog using markdown with Next.Js.
 githubUrl: https://github.com/dkshs/dkblog
 siteUrl: https://blog.dkshs.me
+lastModified: "2025-01-21"
 ---
 
 DkBlog is a project using [Next.Js](https://nextjs.org/) to create a dynamic blog with [markdown](https://www.markdownguide.org/).
