--- a/src/data/projects/dkcutter-django.mdx
+++ b/src/data/projects/dkcutter-django.mdx
@@ -2,6 +2,7 @@
 title: "DKCutter Django"
 description: DKCutter Django is a framework for jumpstarting production-ready Django projects quickly.
 githubUrl: https://github.com/dkshs/dkcutter-django
+lastModified: "2025-02-05"
 ---
 
 [![Build Status](https://img.shields.io/github/actions/workflow/status/dkshs/dkcutter-django/ci.yml?branch=main)](https://github.com/dkshs/dkcutter-django/actions/workflows/ci.yml?query=branch%3Amain)
