--- a/src/data/projects/dkcutter-nextjs.mdx
+++ b/src/data/projects/dkcutter-nextjs.mdx
@@ -2,6 +2,7 @@
 title: "DKCutter NextJs"
 description: DKCutter NextJs is a framework for quickly starting Next.Js projects.
 githubUrl: https://github.com/dkshs/dkcutter-nextjs
+lastModified: "2024-09-22"
 ---
 
 Powered by [DKCutter](https://github.com/dkshs/dkcutter), DKCutter NextJs is a framework for quickly starting Next.Js projects.
