--- a/src/data/projects/dkcutter.mdx
+++ b/src/data/projects/dkcutter.mdx
@@ -3,6 +3,7 @@ title: "DKCutter"
 description: A command-line utility that creates projects from templates.
 githubUrl: https://github.com/dkshs/dkcutter
 siteUrl: https://dkcutter.dkshs.me
+lastModified: "2025-01-21"
 ---
 
 DKCutter makes it easy to create projects through templates.
