--- a/src/data/projects/video-ambilight.mdx
+++ b/src/data/projects/video-ambilight.mdx
@@ -4,6 +4,7 @@ description: 🌈 Ambilight Effect - React - Next.js (YouTube iframe, Video).
 githubUrl: https://github.com/dkshs/video-ambilight
 siteUrl: https://dkshs.github.io/video-ambilight/
 image: /projects/video-ambilight.png # file in the `/public` folder
+lastModified: "2025-01-21"
 ---
 
 [![Project preview](/projects/video-ambilight.png)](https://dkshs.github.io/video-ambilight/)
