--- a/src/data/projects/eslint-config.mdx
+++ b/src/data/projects/eslint-config.mdx
@@ -3,6 +3,7 @@ title: "ESLint Config"
 description: DKSHS's ESLint config preset for JavaScript, TypeScript, and Prettier.
 githubUrl: https://github.com/dkshs/eslint-config
 siteUrl: https://eslint-config.dkshs.me
+lastModified: "2025-03-16"
 ---
 
 [![Version](https://img.shields.io/npm/v/@dkshs/eslint-config)](https://www.npmjs.com/package/@dkshs/eslint-config)
