--- a/src/data/projects/ncontiero.com.mdx
+++ b/src/data/projects/ncontiero.com.mdx
@@ -4,6 +4,7 @@ description: My personal website (The website you're looking at).
 githubUrl: https://github.com/dkshs/ncontiero.com
 siteUrl: https://ncontiero.com/
 image: /projects/ncontiero.com.png # file in the `/public` folder
+lastModified: "2025-03-31"
 ---
 
 [![Project preview](/projects/ncontiero.com.png)](https://ncontiero.com/)
